--- a/Booking/src/main/resources/application.properties
+++ b/Booking/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Booking
+spring.datasource.url=jdbc:mysql://localhost:3306/booking_DB?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=30102003Ma#
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=8085
